CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(leetcode)

FIND_PACKAGE(GTest REQUIRED)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
MESSAGE("${GTEST_INCLUDE_DIRS})")

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} ${PROJECT_NAME}_srcs)

IF(NOT ${PROJECT_NAME}_srcs)
    MESSAGE(STATUS "No source under leetcode")
    RETURN()
ENDIF()

ADD_EXECUTABLE(${PROJECT_NAME}_puzzles
    ${${PROJECT_NAME}_srcs}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}_puzzles
    ${GTEST_LIBRARY}
    ${GTEST_MAIN_LIBRARY}
)
