CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(leetcode)

ENABLE_TESTING()

SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(GTest REQUIRED)

INCLUDE_DIRECTORIES(
    ${GTEST_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    /usr/local/include
)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} ${PROJECT_NAME}_puzzles)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src ${PROJECT_NAME}_srcs)

IF(NOT ${PROJECT_NAME}_puzzles)
    MESSAGE(STATUS "No puzzle under leetcode")
    RETURN()
ENDIF()

ADD_EXECUTABLE(${PROJECT_NAME}_puzzles
    ${${PROJECT_NAME}_srcs}
    ${${PROJECT_NAME}_puzzles}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}_puzzles
    ${GTEST_LIBRARY}
    ${GTEST_MAIN_LIBRARY}
)
